[package]
name = "psina"
version = "0.1.7"
edition = "2021"
description = "Blazzzzingly fast graphql schema generator from prisma file"
authors=["genrikhfetishchev@gmail.com"]
homepage="https://github.com/GenrikhFetischev/psina"
license = "Artistic-2.0"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
